--- a/public/make.html
+++ b/public/make.html
@@ -15,8 +15,8 @@
       <h1>Hot Restaurant!</h1>
       <h3>Book your seat before they're all gone!</h3>
       <hr>
-      <a href="/view"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> View Tables</button></a>
-      <a href="/home"><button class="btn btn-danger btn-lg"><span class="fa fa-th-list"></span> Home</button></a>
+      <a href="/view"><button class="btn btn-danger btn-lg"><span class="fa fa-list"></span> View Tables</button></a>
+      <a href="/home"><button class="btn btn-danger btn-lg"><span class="fa fa-home"></span> Home</button></a>
     </div>
     <div class="card">
         <h5 class="card-header">Featured</h5>
