fixed home button bug

--- a/public/make.html
+++ b/public/make.html
@@ -16,7 +16,7 @@
       <h3>Book your seat before they're all gone!</h3>
       <hr>
       <a href="/view"><button class="btn btn-danger btn-lg"><span class="fa fa-list"></span> View Tables</button></a>
-      <a href="/home"><button class="btn btn-danger btn-lg"><span class="fa fa-home"></span> Home</button></a>
+      <a href="/"><button class="btn btn-danger btn-lg"><span class="fa fa-home"></span> Home</button></a>
     </div>
     <div class="card">
         <h5 class="card-header">Featured</h5>
@@ -52,3 +52,6 @@
     </div>
 </body>
 </html>
+<script>
+
+</script>
