--- a/public/make.html
+++ b/public/make.html
@@ -24,22 +24,22 @@
             <form>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Name</label>
-                  <input class="form-control">
+                  <input class="form-control" id="name">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Phone Number</label>
-                  <input class="form-control">
+                  <input class="form-control" id="phone">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input type="email" class="form-control" id="email" placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                   </div>
                   <div class="form-group">
                     <label>Unique ID</label>
-                    <input class="form-control">
+                    <input class="form-control" id="unique">
                   </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary" id= "add">Submit</button>
               </form>
         </div>
       </div>
@@ -53,5 +53,23 @@
 </body>
 </html>
 <script>
+// /api/waitlist
+// /api/res
 
+$("#add").on("click", function(event) {
+      event.preventDefault();
+      var newTable = {
+        id: $("#unique").val().trim(),
+        name: $("#name").val().trim(),
+        email: $("#email").val().trim(),
+        phone: $("#phone").val().trim()
+      };
+
+      // Question: What does this code do??
+      $.post("/api/res", newTable)
+        .then(function(data) {
+          console.log("make.html", data);
+          alert("Adding table...");
+        });
+    });
 </script>
