--- a/public/make.html
+++ b/public/make.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="../routing/res.js"></script>
+  <script src="../routing/home.js"></script>
+  <script src="../data/data.js"></script>
 </head>
 <body>
   <div class="container">
