--- a/public/make.html
+++ b/public/make.html
@@ -27,20 +27,20 @@
             <form action="/api/res" method="POST">
                 <div class="form-group">
                   <label for="exampleInputEmail1">Name</label>
-                  <input class="form-control" id="name">
+                  <input class="form-control" name= "name" id="name">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Phone Number</label>
-                  <input class="form-control" id="phone">
+                  <input class="form-control"name= "phone" id="phone">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter email">
+                    <input type="email" name= "email" class="form-control" id="email" placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                   </div>
                   <div class="form-group">
                     <label>Unique ID</label>
-                    <input class="form-control" id="unique">
+                    <input class="form-control" name="id" id="id">
                   </div>
                 <button type="submit" class="btn btn-primary" value="submit" id= "add">Submit</button>
               </form>
