api links updated

--- a/public/make.html
+++ b/public/make.html
@@ -50,8 +50,7 @@
       
 </div>
     <div class="container">
-        <a href="">API Table Link</a> |
-        <a href="">API Wait List</a>
+      <p> <a href="/api/res">API Table Link</a> | <a href="/api/waitlist">API Wait List</a></p>
     </div>
 </body>
 </html>
