--- a/public/view.html
+++ b/public/view.html
@@ -53,6 +53,7 @@
             <div class="card-body">
             </div>
         </div>
+        <p> <a href="/api/res">API Table Link</a> | <a href="/api/waitlist">API Wait List</a></p>
 
 
 </body>
