--- a/public/home.html
+++ b/public/home.html
@@ -25,7 +25,7 @@
     </div>
 </div>
     <div class="container">
-       <p> <a href="">API Table Link</a> | <a href="">API Wait List</a></p>
+       <p> <a href="/api/res">API Table Link</a> | <a href="/api/waitlist">API Wait List</a></p>
     </div>
 </body>
 
